# lib-avstack-trust

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
analysis/: bootstrap.py  run_scenario.py  run_test_scenario.py  run_trust_scenario.py  utils.py
analysis/config/: _default_world.py  basic.py  msmt_based.py  track_based.py
analysis/simulation/: __init__.py  agents.py  communication.py  display.py  motion.py  sensors.py  spawn.py  world.py
avtrust/: __init__.py  config.py  distributions.py  estimator.py  fusion.py  hooks.py  measurement.py  metrics.py  plotting.py  propagator.py  updater.py
avtrust/metrics/: __init__.py  metrics.py  plotting.py
avtrust/old/: __init__.py  distribution.py  estimate.py  measurement.py  pipeline.py  state.py
config/_base_/: base_agent.py  base_command_center.py  base_object.py  base_scenario.py  base_trusted_agent.py  base_untrusted_agent.py  base_world.py
config/agent/: untrusted_static_agent.py
config/command_center/: point_based_ci_fusion.py
config/scenarios/: a1_untrusted_static_agents.py  test_scenario.py
mate/: __init__.py  agents.py  config.py  connectives.py  display.py  distribution.py  distributions.py  estimate.py  estimator.py  fov.py  logging.py  measurement.py  metrics.py  pipeline.py  plotting,py  plotting.py  propagator.py  psm.py  state.py  updater.py  utils.py  wrappers.py
mate/old/: estimate.py  measurement.py  state.py
mate/simulation/: __init__.py  agents.py  bootstrap.py  communications.py  dynamics.py  sensors.py  spawn.py  utils.py  world.py
mate/trust/: __init__.py  estimate.py  measurement.py  pipeline.py  state.py
matk/: __init__.py  agents.py  bootstrap.py  clustering.py  communications.py  display.py  environment.py  fusion.py  motion.py  pipeline.py  sensors.py  wrappers.py
notebooks/: test_adversary_bound.ipynb  test_pf.ipynb  test_trust_cdc.ipynb  test_trust_msmsts_cdc.ipynb  test_trust_sampled.ipynb  tune_trust_updater.ipynb
tests/: test_clustering.py  test_connectives.py  test_distributions.py  test_estimate.py  test_fov.py  test_fusion.py  test_measurement.py  test_metrics.py  test_propagator.py  test_sampling.py  test_updater.py
tests/builders/: test_agent_builders.py  test_base_builders.py  test_cc_builders.py
tests/trust/: test_estimate.py
